Feature/dd 2924 spring upgrade (#122)
* java 25 and gh build

* spring boot 4 jackson 3 http client

* lombok for gh

* lombok for gh

* trivtastic